--- a/styles/main.css
+++ b/styles/main.css
@@ -3,16 +3,69 @@
   margin: 0;
 }
 
-#app {
+.wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: green;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  background: #FF0000;
   height: 100vh;
+  -webkit-box-ordinal-group: 1;
+      -ms-flex-order: 0;
+          order: 0;
 }
 
 .header {
-  background: yellow;
-  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #ffdb4d;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 20%;
+          flex: 1 20%;
+}
+
+.header > div {
+  margin: auto;
+}
+
+.header > div > img {
+  width: 16em;
+  height: auto;
+  top: 50px;
+}
+
+.header > div::after {
+  content: ".COURSES";
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  font-size: 1.2em;
+  color: #000000;
+}
+
+.main-content {
+  background: #6daae8;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 60%;
+          flex: 1 60%;
+}
+
+.footer {
+  background: #000000;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 10%;
+          flex: 1 10%;
 }
 /*# sourceMappingURL=main.css.map */
