--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
-  background: #FF0000;
+  background: #ff0000;
   height: 100vh;
   -webkit-box-ordinal-group: 1;
       -ms-flex-order: 0;
@@ -22,7 +22,11 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: #ffdb4d;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #ffffff;
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
@@ -33,20 +37,35 @@
 
 .header > div {
   margin: auto;
+  margin-top: 1%;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 60%;
+          flex: 1 60%;
 }
 
-.header > div > img {
+.header > div > a > img {
   width: 16em;
-  height: auto;
-  top: 50px;
 }
 
 .header > div::after {
-  content: ".COURSES";
+  content: ".SCHEDULE";
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bolder;
   font-size: 1.2em;
   color: #000000;
+}
+
+.navigation {
+  background: gold;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 40%;
+          flex: 1 40%;
 }
 
 .main-content {
