--- a/styles/main.css
+++ b/styles/main.css
@@ -33,21 +33,29 @@
   -webkit-box-flex: 1;
       -ms-flex: 1 20%;
           flex: 1 20%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .header > div {
-  margin: auto;
-  margin-top: 1%;
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
   -webkit-box-flex: 1;
-      -ms-flex: 1 60%;
-          flex: 1 60%;
+      -ms-flex: 1 70%;
+          flex: 1 70%;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .header > div > a > img {
-  width: 16em;
+  width: 15em;
+  height: 90%;
 }
 
 .header > div::after {
@@ -58,14 +66,14 @@
   color: #000000;
 }
 
-.navigation {
+.header > div + nav {
   background: gold;
   -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
           order: 2;
   -webkit-box-flex: 1;
-      -ms-flex: 1 40%;
-          flex: 1 40%;
+      -ms-flex: 1 30%;
+          flex: 1 30%;
 }
 
 .main-content {
