--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,31 +15,34 @@
   background: #ffffff; // => testing color
   order: 1;
   flex: 1 20%;
+  user-select: none; 
   > div {
     // div element styles {div of logo}
-    margin: auto;
-    margin-top: 1%;
     order: 1;
-    flex: 1 60%;
+    flex: 1 70%;
+    justify-self: center;
+    align-self: center;
   }
   > div > a > img {
     // logo styles
-    width: 16em;
+    width: 15em;
+    height: 90%; // because ::after is conflicting {need to be 100%}
   }
   > div::after {
     // pseudo elemen fot logo
     content: ".SCHEDULE";
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    font-size: 1.2em;
+    font: {
+      family: Arial, Helvetica, sans-serif;
+      weight: bolder;
+      size: 1.2em;
+    }
     color: #000000;
   }
-}
-.navigation {
-  background: gold;
-  order: 2;
-  flex: 1 40%;
-  // flex: 0 30%; // flex size of nav element
+  > div + nav {
+    background: gold;
+    order: 2;
+    flex: 1 30%;
+  }
 }
 .main-content {
   background: #6daae8; // => testing color
