--- a/styles/main.css
+++ b/styles/main.css
@@ -118,21 +118,21 @@
   font-size: 1em;
 }
 
-.search-form > .search-form__button::after {
-  content: "";
-  position: absolute;
-  border: 10px solid transparent;
-  border-left: 29px solid #000;
-}
-
 .main-content {
-  background: #6daae8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: white;
   -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
           order: 2;
   -webkit-box-flex: 1;
       -ms-flex: 1 60%;
           flex: 1 60%;
+}
+
+.main-content > .wrapper2 {
+  background: #000;
 }
 
 .footer {
